// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BridgeController SSE should publish validation failures 4`] = `
[
  [
    "Unified SwapBridge Quotes Failed Validation",
    {
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "failures": [
        "lifi|quote.src",
        "lifi|quote.dest",
        "lifi|quote.feeData.metabridge",
        "lifi|quote.aggregator",
        "lifi|quote.protocols",
        "lifi|quote.steps.0.src",
        "lifi|quote.steps.0.dest",
        "lifi|quote.steps.1.src",
        "lifi|quote.steps.1.dest",
      ],
      "feature_id": "unified_swap_bridge",
      "location": "Unknown",
      "refresh_count": 1,
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": "test",
    },
  ],
  [
    "Unified SwapBridge Quotes Failed Validation",
    {
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "failures": [
        "unknown|unknown",
      ],
      "feature_id": "unified_swap_bridge",
      "location": "Unknown",
      "refresh_count": 1,
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": "test",
    },
  ],
  [
    "Unified SwapBridge Quotes Failed Validation",
    {
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "failures": [
        "unknown|quote",
      ],
      "feature_id": "unified_swap_bridge",
      "location": "Unknown",
      "refresh_count": 1,
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": "test",
    },
  ],
]
`;

exports[`BridgeController SSE should replace all stale quotes after a refresh and first quote is received 1`] = `
[
  "Unified SwapBridge Quotes Requested",
  {
    "account_hardware_type": null,
    "action_type": "swapbridge-v1",
    "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
    "chain_id_source": "eip155:1",
    "custom_slippage": true,
    "feature_id": "unified_swap_bridge",
    "has_sufficient_funds": true,
    "input_primary_denomination": "token_amount",
    "is_hardware_wallet": false,
    "location": "Unknown",
    "security_warnings": [],
    "slippage_limit": 0.5,
    "stx_enabled": true,
    "swap_type": "crosschain",
    "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
    "token_address_source": "eip155:1/slip44:60",
    "token_security_type_destination": null,
    "token_symbol_destination": "USDC",
    "token_symbol_source": "ETH",
    "usd_amount_source": 100,
    "warnings": [],
  },
]
`;

exports[`BridgeController SSE should reset and refetch quotes after quote request is changed 1`] = `
[
  [
    "Unified SwapBridge Quotes Requested",
    {
      "account_hardware_type": null,
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "feature_id": "unified_swap_bridge",
      "has_sufficient_funds": false,
      "input_primary_denomination": "token_amount",
      "is_hardware_wallet": false,
      "location": "Unknown",
      "security_warnings": [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": null,
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
    },
  ],
]
`;

exports[`BridgeController SSE should reset quotes list if quote refresh fails 2`] = `
[
  [
    "Unified SwapBridge Quotes Requested",
    {
      "account_hardware_type": null,
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "feature_id": "unified_swap_bridge",
      "has_sufficient_funds": true,
      "input_primary_denomination": "token_amount",
      "is_hardware_wallet": false,
      "location": "Unknown",
      "security_warnings": [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": null,
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": [],
    },
  ],
  [
    "Unified SwapBridge Quotes Error",
    {
      "account_hardware_type": null,
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "error_message": "Network error",
      "feature_id": "unified_swap_bridge",
      "has_sufficient_funds": true,
      "is_hardware_wallet": false,
      "location": "Unknown",
      "security_warnings": [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": null,
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": [],
    },
  ],
]
`;

exports[`BridgeController SSE should rethrow error from server 1`] = `
{
  "assetExchangeRates": {
    "eip155:10/erc20:0x1f9840a85d5af5bf1d1762f925bdaddc4201f984": {
      "exchangeRate": undefined,
      "usdExchangeRate": "100",
    },
  },
  "batchSellTrades": null,
  "batchSellTradesLoadingStatus": null,
  "inputPrimaryDenomination": "token_amount",
  "minimumBalanceForRentExemptionInLamports": "0",
  "quoteFetchError": null,
  "quoteRequest": [
    {
      "destChainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "destTokenAddress": "123d1",
      "destWalletAddress": "SolanaWalletAddres1234",
      "insufficientBal": false,
      "resetApproval": false,
      "slippage": 0.5,
      "srcChainId": "0x1",
      "srcTokenAddress": "0x0000000000000000000000000000000000000000",
      "srcTokenAmount": "1000000000000000000",
      "walletAddress": "0x30E8ccaD5A980BDF30447f8c2C48e70989D9d294",
    },
  ],
  "quoteStreamComplete": null,
  "quotes": [],
  "quotesInitialLoadTime": null,
  "quotesLoadingStatus": 0,
  "quotesRefreshCount": 0,
  "tokenSecurityTypeDestination": null,
  "tokenWarnings": [],
}
`;

exports[`BridgeController SSE should rethrow error from server 3`] = `
[
  [
    "Unified SwapBridge Input Changed",
    {
      "action_type": "swapbridge-v1",
      "feature_id": "unified_swap_bridge",
      "input": "chain_source",
      "input_value": "eip155:1",
      "location": "Unknown",
    },
  ],
  [
    "Unified SwapBridge Input Changed",
    {
      "action_type": "swapbridge-v1",
      "feature_id": "unified_swap_bridge",
      "input": "chain_destination",
      "input_value": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "location": "Unknown",
    },
  ],
  [
    "Unified SwapBridge Input Changed",
    {
      "action_type": "swapbridge-v1",
      "feature_id": "unified_swap_bridge",
      "input": "token_destination",
      "input_value": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "location": "Unknown",
    },
  ],
  [
    "Unified SwapBridge Input Changed",
    {
      "action_type": "swapbridge-v1",
      "feature_id": "unified_swap_bridge",
      "input": "slippage",
      "input_value": 0.5,
      "location": "Unknown",
    },
  ],
  [
    "Unified SwapBridge Quotes Requested",
    {
      "account_hardware_type": null,
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "feature_id": "unified_swap_bridge",
      "has_sufficient_funds": true,
      "input_primary_denomination": "token_amount",
      "is_hardware_wallet": false,
      "location": "Unknown",
      "security_warnings": [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": null,
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": [],
    },
  ],
  [
    "Unified SwapBridge Quotes Error",
    {
      "account_hardware_type": null,
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "error_message": "Bridge-api error: timeout from server",
      "feature_id": "unified_swap_bridge",
      "has_sufficient_funds": true,
      "is_hardware_wallet": false,
      "location": "Unknown",
      "security_warnings": [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": null,
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": [],
    },
  ],
]
`;

exports[`BridgeController SSE should trigger quote polling if request is valid 1`] = `
{
  "assetExchangeRates": {
    "eip155:10/erc20:0x1f9840a85d5af5bf1d1762f925bdaddc4201f984": {
      "exchangeRate": undefined,
      "usdExchangeRate": "100",
    },
  },
  "batchSellTrades": null,
  "batchSellTradesLoadingStatus": null,
  "inputPrimaryDenomination": "token_amount",
  "minimumBalanceForRentExemptionInLamports": "0",
  "quoteFetchError": null,
  "quoteRequest": [
    {
      "destChainId": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "destTokenAddress": "123d1",
      "destWalletAddress": "SolanaWalletAddres1234",
      "insufficientBal": false,
      "resetApproval": false,
      "slippage": 0.5,
      "srcChainId": "0x1",
      "srcTokenAddress": "0x0000000000000000000000000000000000000000",
      "srcTokenAmount": "1000000000000000000",
      "walletAddress": "0x30E8ccaD5A980BDF30447f8c2C48e70989D9d294",
    },
  ],
  "quoteStreamComplete": null,
  "quotes": [],
  "quotesInitialLoadTime": null,
  "quotesLoadingStatus": 0,
  "quotesRefreshCount": 0,
  "tokenSecurityTypeDestination": null,
  "tokenWarnings": [],
}
`;

exports[`BridgeController SSE should trigger quote polling if request is valid 2`] = `
[
  [
    "Unified SwapBridge Input Changed",
    {
      "action_type": "swapbridge-v1",
      "feature_id": "unified_swap_bridge",
      "input": "chain_source",
      "input_value": "eip155:1",
      "location": "Unknown",
    },
  ],
  [
    "Unified SwapBridge Input Changed",
    {
      "action_type": "swapbridge-v1",
      "feature_id": "unified_swap_bridge",
      "input": "chain_destination",
      "input_value": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "location": "Unknown",
    },
  ],
  [
    "Unified SwapBridge Input Changed",
    {
      "action_type": "swapbridge-v1",
      "feature_id": "unified_swap_bridge",
      "input": "token_destination",
      "input_value": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "location": "Unknown",
    },
  ],
  [
    "Unified SwapBridge Input Changed",
    {
      "action_type": "swapbridge-v1",
      "feature_id": "unified_swap_bridge",
      "input": "slippage",
      "input_value": 0.5,
      "location": "Unknown",
    },
  ],
  [
    "Unified SwapBridge Quotes Requested",
    {
      "account_hardware_type": null,
      "action_type": "swapbridge-v1",
      "chain_id_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp",
      "chain_id_source": "eip155:1",
      "custom_slippage": true,
      "feature_id": "unified_swap_bridge",
      "has_sufficient_funds": true,
      "input_primary_denomination": "token_amount",
      "is_hardware_wallet": false,
      "location": "Unknown",
      "security_warnings": [],
      "slippage_limit": 0.5,
      "stx_enabled": true,
      "swap_type": "crosschain",
      "token_address_destination": "solana:5eykt4UsFv8P8NJdTREpY1vzqKqZKvdp/token:123d1",
      "token_address_source": "eip155:1/slip44:60",
      "token_security_type_destination": null,
      "token_symbol_destination": "USDC",
      "token_symbol_source": "ETH",
      "usd_amount_source": 100,
      "warnings": [],
    },
  ],
]
`;
